# polymorphism

./: CMakeLists.txt
inc/: Employee.h  Employee.h~  Manager.h  Manager.h~  Secretary.h
src/: Employee.cpp  Employee.cpp~  Manager.cpp  Manager.cpp~  Secretary.cpp  main.cpp  main.cpp~
